Populate more CMs onto build01

--- a/core-services/prow/02_config/_plugins.yaml
+++ b/core-services/prow/02_config/_plugins.yaml
@@ -237,12 +237,16 @@ config_updater:
   maps:
     ci-operator/config/**/*-fcos.yaml:
       clusters:
+        ci/api-build01-ci-devcluster-openshift-com:6443:
+        - ci
         default:
         - ci
         - ci-stg
       name: ci-operator-misc-configs
     ci-operator/config/**/*-hive-v1.yaml:
       clusters:
+        ci/api-build01-ci-devcluster-openshift-com:6443:
+        - ci
         default:
         - ci
         - ci-stg
@@ -257,132 +261,176 @@ config_updater:
       name: ci-operator-master-configs
     ci-operator/config/**/*openshift-3.*.yaml:
       clusters:
+        ci/api-build01-ci-devcluster-openshift-com:6443:
+        - ci
         default:
         - ci
         - ci-stg
       name: ci-operator-3.x-configs
     ci-operator/config/**/*openshift-4.1*.yaml:
       clusters:
+        ci/api-build01-ci-devcluster-openshift-com:6443:
+        - ci
         default:
         - ci
         - ci-stg
       name: ci-operator-4.1-configs
     ci-operator/config/**/*openshift-4.2*.yaml:
       clusters:
+        ci/api-build01-ci-devcluster-openshift-com:6443:
+        - ci
         default:
         - ci
         - ci-stg
       name: ci-operator-4.2-configs
     ci-operator/config/**/*openshift-4.3*.yaml:
       clusters:
+        ci/api-build01-ci-devcluster-openshift-com:6443:
+        - ci
         default:
         - ci
         - ci-stg
       name: ci-operator-4.3-configs
     ci-operator/config/**/*openshift-4.4*.yaml:
       clusters:
+        ci/api-build01-ci-devcluster-openshift-com:6443:
+        - ci
         default:
         - ci
         - ci-stg
       name: ci-operator-4.4-configs
     ci-operator/config/**/*openshift-4.5*.yaml:
       clusters:
+        ci/api-build01-ci-devcluster-openshift-com:6443:
+        - ci
         default:
         - ci
         - ci-stg
       name: ci-operator-4.5-configs
     ci-operator/config/**/*openshift-4.6*.yaml:
       clusters:
+        ci/api-build01-ci-devcluster-openshift-com:6443:
+        - ci
         default:
         - ci
         - ci-stg
       name: ci-operator-4.6-configs
     ci-operator/config/**/*openshift-v4*.yaml:
       clusters:
+        ci/api-build01-ci-devcluster-openshift-com:6443:
+        - ci
         default:
         - ci
         - ci-stg
       name: ci-operator-misc-configs
     ci-operator/config/**/*release-0.*.yaml:
       clusters:
+        ci/api-build01-ci-devcluster-openshift-com:6443:
+        - ci
         default:
         - ci
         - ci-stg
       name: ci-operator-misc-configs
     ci-operator/config/**/*release-1.*.yaml:
       clusters:
+        ci/api-build01-ci-devcluster-openshift-com:6443:
+        - ci
         default:
         - ci
         - ci-stg
       name: ci-operator-misc-configs
     ci-operator/config/**/*release-3.*.yaml:
       clusters:
+        ci/api-build01-ci-devcluster-openshift-com:6443:
+        - ci
         default:
         - ci
         - ci-stg
       name: ci-operator-3.x-configs
     ci-operator/config/**/*release-4.1*.yaml:
       clusters:
+        ci/api-build01-ci-devcluster-openshift-com:6443:
+        - ci
         default:
         - ci
         - ci-stg
       name: ci-operator-4.1-configs
     ci-operator/config/**/*release-4.2*.yaml:
       clusters:
+        ci/api-build01-ci-devcluster-openshift-com:6443:
+        - ci
         default:
         - ci
         - ci-stg
       name: ci-operator-4.2-configs
     ci-operator/config/**/*release-4.3*.yaml:
       clusters:
+        ci/api-build01-ci-devcluster-openshift-com:6443:
+        - ci
         default:
         - ci
         - ci-stg
       name: ci-operator-4.3-configs
     ci-operator/config/**/*release-4.4*.yaml:
       clusters:
+        ci/api-build01-ci-devcluster-openshift-com:6443:
+        - ci
         default:
         - ci
         - ci-stg
       name: ci-operator-4.4-configs
     ci-operator/config/**/*release-4.5*.yaml:
       clusters:
+        ci/api-build01-ci-devcluster-openshift-com:6443:
+        - ci
         default:
         - ci
         - ci-stg
       name: ci-operator-4.5-configs
     ci-operator/config/**/*release-4.6*.yaml:
       clusters:
+        ci/api-build01-ci-devcluster-openshift-com:6443:
+        - ci
         default:
         - ci
         - ci-stg
       name: ci-operator-4.6-configs
     ci-operator/config/**/*release-next*.yaml:
       clusters:
+        ci/api-build01-ci-devcluster-openshift-com:6443:
+        - ci
         default:
         - ci
         - ci-stg
       name: ci-operator-misc-configs
     ci-operator/config/**/*release-v*.yaml:
       clusters:
+        ci/api-build01-ci-devcluster-openshift-com:6443:
+        - ci
         default:
         - ci
         - ci-stg
       name: ci-operator-misc-configs
     ci-operator/config/**/cluster-logging-operator/openshift*-cluster-logging-operator-feature*.yaml:
       clusters:
+        ci/api-build01-ci-devcluster-openshift-com:6443:
+        - ci
         default:
         - ci
         - ci-stg
       name: ci-operator-misc-configs
     ci-operator/config/**/elasticsearch-operator/openshift*-elasticsearch-operator-feature*.yaml:
       clusters:
+        ci/api-build01-ci-devcluster-openshift-com:6443:
+        - ci
         default:
         - ci
         - ci-stg
       name: ci-operator-misc-configs
     ci-operator/config/**/origin-aggregated-logging/openshift*-origin-aggregated-logging-feature*.yaml:
       clusters:
+        ci/api-build01-ci-devcluster-openshift-com:6443:
+        - ci
         default:
         - ci
         - ci-stg
@@ -395,6 +443,8 @@ config_updater:
       name: ci-operator-misc-configs
     ci-operator/config/operator-framework/*/*feature*.yaml:
       clusters:
+        ci/api-build01-ci-devcluster-openshift-com:6443:
+        - ci
         default:
         - ci
         - ci-stg
@@ -583,48 +633,64 @@ config_updater:
       name: step-registry
     ci-operator/templates/cluster-launch-src.yaml:
       clusters:
+        ci/api-build01-ci-devcluster-openshift-com:6443:
+        - ci
         default:
         - ci
         - ci-stg
       name: prow-job-cluster-launch-src
     ci-operator/templates/master-sidecar-3.yaml:
       clusters:
+        ci/api-build01-ci-devcluster-openshift-com:6443:
+        - ci
         default:
         - ci
         - ci-stg
       name: prow-job-master-sidecar-3
     ci-operator/templates/master-sidecar-4.2.yaml:
       clusters:
+        ci/api-build01-ci-devcluster-openshift-com:6443:
+        - ci
         default:
         - ci
         - ci-stg
       name: prow-job-master-sidecar-4.2
     ci-operator/templates/master-sidecar-4.4.yaml:
       clusters:
+        ci/api-build01-ci-devcluster-openshift-com:6443:
+        - ci
         default:
         - ci
         - ci-stg
       name: prow-job-master-sidecar-4.4
     ci-operator/templates/openshift/endurance/endurance-install.yaml:
       clusters:
+        ci/api-build01-ci-devcluster-openshift-com:6443:
+        - ci
         default:
         - ci
         - ci-stg
       name: prow-job-endurance-install
     ci-operator/templates/openshift/endurance/endurance-test.yaml:
       clusters:
+        ci/api-build01-ci-devcluster-openshift-com:6443:
+        - ci
         default:
         - ci
         - ci-stg
       name: prow-job-endurance-test
     ci-operator/templates/openshift/installer/cluster-launch-installer-console.yaml:
       clusters:
+        ci/api-build01-ci-devcluster-openshift-com:6443:
+        - ci
         default:
         - ci
         - ci-stg
       name: prow-job-cluster-launch-installer-console
     ci-operator/templates/openshift/installer/cluster-launch-installer-custom-test-image.yaml:
       clusters:
+        ci/api-build01-ci-devcluster-openshift-com:6443:
+        - ci
         default:
         - ci
         - ci-stg
@@ -639,36 +705,48 @@ config_updater:
       name: prow-job-cluster-launch-installer-e2e
     ci-operator/templates/openshift/installer/cluster-launch-installer-libvirt-e2e.yaml:
       clusters:
+        ci/api-build01-ci-devcluster-openshift-com:6443:
+        - ci
         default:
         - ci
         - ci-stg
       name: prow-job-cluster-launch-installer-libvirt-e2e
     ci-operator/templates/openshift/installer/cluster-launch-installer-metal-e2e.yaml:
       clusters:
+        ci/api-build01-ci-devcluster-openshift-com:6443:
+        - ci
         default:
         - ci
         - ci-stg
       name: prow-job-cluster-launch-installer-metal-e2e
     ci-operator/templates/openshift/installer/cluster-launch-installer-nested-virt-tests.yaml:
       clusters:
+        ci/api-build01-ci-devcluster-openshift-com:6443:
+        - ci
         default:
         - ci
         - ci-stg
       name: prow-job-cluster-launch-installer-nested-virt-tests
     ci-operator/templates/openshift/installer/cluster-launch-installer-openstack-e2e.yaml:
       clusters:
+        ci/api-build01-ci-devcluster-openshift-com:6443:
+        - ci
         default:
         - ci
         - ci-stg
       name: prow-job-cluster-launch-installer-openstack-e2e
     ci-operator/templates/openshift/installer/cluster-launch-installer-ovirt-e2e.yaml:
       clusters:
+        ci/api-build01-ci-devcluster-openshift-com:6443:
+        - ci
         default:
         - ci
         - ci-stg
       name: prow-job-cluster-launch-installer-ovirt-e2e
     ci-operator/templates/openshift/installer/cluster-launch-installer-remote-libvirt-e2e.yaml:
       clusters:
+        ci/api-build01-ci-devcluster-openshift-com:6443:
+        - ci
         default:
         - ci
         - ci-stg
@@ -691,48 +769,64 @@ config_updater:
       name: prow-job-cluster-launch-installer-upi-e2e
     ci-operator/templates/openshift/installer/cluster-launch-installer-upi-src.yaml:
       clusters:
+        ci/api-build01-ci-devcluster-openshift-com:6443:
+        - ci
         default:
         - ci
         - ci-stg
       name: prow-job-cluster-launch-installer-upi-src
     ci-operator/templates/openshift/openshift-ansible/cluster-launch-e2e-openshift-ansible.yaml:
       clusters:
+        ci/api-build01-ci-devcluster-openshift-com:6443:
+        - ci
         default:
         - ci
         - ci-stg
       name: prow-job-cluster-launch-e2e-openshift-ansible
     ci-operator/templates/openshift/openshift-ansible/cluster-launch-e2e-openshift-jenkins.yaml:
       clusters:
+        ci/api-build01-ci-devcluster-openshift-com:6443:
+        - ci
         default:
         - ci
         - ci-stg
       name: prow-job-cluster-launch-e2e-openshift-jenkins
     ci-operator/templates/openshift/openshift-ansible/cluster-launch-e2e-upgrade.yaml:
       clusters:
+        ci/api-build01-ci-devcluster-openshift-com:6443:
+        - ci
         default:
         - ci
         - ci-stg
       name: prow-job-cluster-launch-e2e-upgrade
     ci-operator/templates/openshift/openshift-ansible/cluster-launch-e2e.yaml:
       clusters:
+        ci/api-build01-ci-devcluster-openshift-com:6443:
+        - ci
         default:
         - ci
         - ci-stg
       name: prow-job-cluster-launch-e2e
     ci-operator/templates/openshift/openshift-ansible/cluster-scaleup-e2e-40.yaml:
       clusters:
+        ci/api-build01-ci-devcluster-openshift-com:6443:
+        - ci
         default:
         - ci
         - ci-stg
       name: prow-job-cluster-scaleup-e2e-40
     ci-operator/templates/openshift/openshift-azure/cluster-launch-e2e-azure.yaml:
       clusters:
+        ci/api-build01-ci-devcluster-openshift-com:6443:
+        - ci
         default:
         - ci
         - ci-stg
       name: prow-job-cluster-launch-e2e-azure
     ci-operator/templates/openshift/openshift-azure/rbac.yaml:
       clusters:
+        ci/api-build01-ci-devcluster-openshift-com:6443:
+        - ci
         default:
         - ci
         - ci-stg
