validate-owners.sh: pass whitelist as an arg

--- a/ci-operator/jobs/openshift/release/openshift-release-master-presubmits.yaml
+++ b/ci-operator/jobs/openshift/release/openshift-release-master-presubmits.yaml
@@ -388,6 +388,7 @@ presubmits:
       containers:
       - args:
         - ./
+        - ./hack/missing-owners-whitelist
         command:
         - hack/validate-owners.sh
         image: centos:7
