template: Ensure metal jobs output the cluster link
The bash x output at the end of the run doesn't help debugging, and
cluster-bot grabs only the last two lines for convenience. Keep that
consistent here.

--- a/ci-operator/templates/openshift/installer/cluster-launch-installer-metal-e2e.yaml
+++ b/ci-operator/templates/openshift/installer/cluster-launch-installer-metal-e2e.yaml
@@ -486,6 +486,7 @@ objects:
         approve_csrs &
         update_image_registry &
 
+        set +x
         echo "Completing UPI setup"
         openshift-install --dir=/tmp/artifacts/installer wait-for install-complete 2>&1 | grep -v password &
         wait "$!"
