--- a/ci-operator/templates/openshift/installer/cluster-launch-installer-upi-e2e.yaml
+++ b/ci-operator/templates/openshift/installer/cluster-launch-installer-upi-e2e.yaml
@@ -1816,6 +1816,7 @@ objects:
           update_image_registry &
         fi
 
+        set +x
         echo "Completing UPI setup"
         openshift-install --dir=/tmp/artifacts/installer wait-for install-complete 2>&1 | grep -v password &
         wait "$!"
