configresolver: add job configs and arg

--- a/core-services/ci-operator-configresolver/ci-operator-configresolver.yaml
+++ b/core-services/ci-operator-configresolver/ci-operator-configresolver.yaml
@@ -106,6 +106,7 @@ items:
           args:
           - -config=/etc/configs
           - -registry=/etc/registry
+          - -jobs=/etc/job-config
           - -prow-config=/etc/config/config.yaml
           - -flat-registry
           - -log-level=debug
@@ -164,6 +165,36 @@ items:
           - name: release-46
             mountPath: /etc/configs/release-4.6
             readOnly: true
+          - name: job-config-misc
+            mountPath: /etc/job-config/misc
+            readOnly: true
+          - name: job-config-master
+            mountPath: /etc/job-config/master
+            readOnly: true
+          - name: job-config-3x
+            mountPath: /etc/job-config/3.x
+            readOnly: true
+          - name: job-config-40
+            mountPath: /etc/job-config/4.0
+            readOnly: true
+          - name: job-config-41
+            mountPath: /etc/job-config/4.1
+            readOnly: true
+          - name: job-config-42
+            mountPath: /etc/job-config/4.2
+            readOnly: true
+          - name: job-config-43
+            mountPath: /etc/job-config/4.3
+            readOnly: true
+          - name: job-config-44
+            mountPath: /etc/job-config/4.4
+            readOnly: true
+          - name: job-config-45
+            mountPath: /etc/job-config/4.5
+            readOnly: true
+          - name: job-config-46
+            mountPath: /etc/job-config/4.6
+            readOnly: true
           resources:
             requests:
               memory: "2Gi"
@@ -202,3 +233,33 @@ items:
         - name: release-46
           configMap:
             name: ci-operator-4.6-configs
+        - name: job-config-misc
+          configMap:
+            name: job-config-misc
+        - name: job-config-master
+          configMap:
+            name: job-config-master
+        - name: job-config-3x
+          configMap:
+            name: job-config-3.x
+        - name: job-config-40
+          configMap:
+            name: job-config-4.0
+        - name: job-config-41
+          configMap:
+            name: job-config-4.1
+        - name: job-config-42
+          configMap:
+            name: job-config-4.2
+        - name: job-config-43
+          configMap:
+            name: job-config-4.3
+        - name: job-config-44
+          configMap:
+            name: job-config-4.4
+        - name: job-config-45
+          configMap:
+            name: job-config-4.5
+        - name: job-config-46
+          configMap:
+            name: job-config-4.6
