--- a/ci-operator/config/openshift/tektoncd-pipeline-operator/openshift-tektoncd-pipeline-operator-master.yaml
+++ b/ci-operator/config/openshift/tektoncd-pipeline-operator/openshift-tektoncd-pipeline-operator-master.yaml
@@ -46,6 +46,10 @@ tests:
   commands: VERBOSE=2 make lint
   container:
     from: src
+- as: unit
+  commands: VERBOSE=2 make test-unit
+  container:
+    from: src
 - as: e2e
   commands: make test-e2e
   openshift_installer_src:
