add verify-deps to auth-team repos

--- a/ci-operator/config/openshift/service-ca-operator/openshift-service-ca-operator-master.yaml
+++ b/ci-operator/config/openshift/service-ca-operator/openshift-service-ca-operator-master.yaml
@@ -42,6 +42,11 @@ tests:
   commands: ARTIFACT_DIR=/tmp/artifacts JUNIT_REPORT=1 make verify
   container:
     from: src
+- as: verify-deps
+  commands: |
+    make verify-deps -k --warn-undefined-variables
+  container:
+    from: src
 - as: e2e-aws
   commands: TEST_SUITE=openshift/conformance/parallel run-tests
   openshift_installer:
