Add knative-eventing{-contrib} labels

--- a/core-services/prow/02_config/_labels.yaml
+++ b/core-services/prow/02_config/_labels.yaml
@@ -502,6 +502,44 @@ repos:
         name: area/test-and-release
         target: both
         addedBy: label
+      - color: 00D8FF
+        description: Issues or PRs related to eventing performance
+        name: area/performance
+        target: both
+        addedBy: label
+  openshift/knative-eventing-contrib:
+    labels:
+      - color: 00D8FF
+        description: Issues or PRs related to test and release
+        name: area/test-and-release
+        target: both
+        addedBy: label
+      - color: 00D8FF
+        description: Issues or PRs related to the CouchDB Source
+        name: area/Couchdb
+        target: both
+        addedBy: label
+      - color: 00D8FF
+        description: Issues or PRs related to the Github Source
+        name: area/GitHub
+        target: both
+        addedBy: label
+      - color: 00D8FF
+        description: Issues or PRs related to the Kafka Source and Channel
+        name: area/Kafka
+        target: both
+        addedBy: label
+      - color: 00D8FF
+        description: Issues or PRs related to the NATSS Channel
+        name: area/NATSS
+        target: both
+        addedBy: label
+      - color: 00D8FF
+        description: Issues or PRs related to the Prometheus Source
+        name: area/prometheus-source
+        target: both
+        addedBy: label
+
   cri-o:
     labels:
       - color: e11d21
