Add tide/merge-method labels
Signed-off-by: Johnny Bieren <jbieren@redhat.com>

--- a/core-services/prow/02_config/_plugins.yaml
+++ b/core-services/prow/02_config/_plugins.yaml
@@ -1436,6 +1436,9 @@ label:
   - platform/libvirt
   - platform/openstack
   - ga
+  - tide/merge-method-merge
+  - tide/merge-method-rebase
+  - tide/merge-method-squash
 lgtm:
 - repos:
   - openshift/odo
