--- a/ci-operator/jobs/openshift/jenkins-openshift-login-plugin/openshift-jenkins-openshift-login-plugin-release-4.3-presubmits.yaml
+++ b/ci-operator/jobs/openshift/jenkins-openshift-login-plugin/openshift-jenkins-openshift-login-plugin-release-4.3-presubmits.yaml
@@ -4,6 +4,7 @@ presubmits:
     always_run: true
     branches:
     - release-4.3
+    cluster: ci/api-build01-ci-devcluster-openshift-com:6443
     context: ci/prow/e2e-aws-jenkins
     decorate: true
     decoration_config:
@@ -102,6 +103,7 @@ presubmits:
     always_run: true
     branches:
     - release-4.3
+    cluster: ci/api-build01-ci-devcluster-openshift-com:6443
     context: ci/prow/images
     decorate: true
     decoration_config:
