Set up Bitwarden for openshift-psap
Signed-off-by: Carlos Eduardo Arango Gutierrez <carangog@redhat.com>

--- a/core-services/ci-secret-bootstrap/_config.yaml
+++ b/core-services/ci-secret-bootstrap/_config.yaml
@@ -447,6 +447,14 @@
     - cluster: default
       namespace: ci
       name: registry-push-credentials-quay.io-integr8ly
+- from:
+    config.json:
+      bw_item: quay.io/openshift-psap
+      field: Push Credentials
+  to:
+    - cluster: default
+      namespace: ci
+      name: registry-push-credentials-quay.io-openshift-psap
 #Pull Credentials 
 - from:
     config.json:
