--- a/ci-operator/jobs/openshift/openshift-azure/openshift-openshift-azure-release-v14-presubmits.yaml
+++ b/ci-operator/jobs/openshift/openshift-azure/openshift-openshift-azure-release-v14-presubmits.yaml
@@ -250,6 +250,24 @@ presubmits:
     always_run: true
     branches:
     - release-v14
+    context: upgrade-v14.1
+    decorate: true
+    name: pull-ci-azure-release-v14-upgrade-v14.1
+    rerun_command: /test upgrade-v14.1
+    spec:
+      containers:
+      - args:
+        - hack/tests/e2e-upgrade.sh
+        - v14.1
+        image: registry.svc.ci.openshift.org/azure/ci-base:latest
+        name: ""
+        resources: {}
+      serviceAccountName: ci-operator
+    trigger: (?m)^/test( | .* )upgrade-v14.1,?($|\s.*)
+  - agent: kubernetes
+    always_run: true
+    branches:
+    - release-v14
     context: ci/prow/images
     decorate: true
     decoration_config:
