--- a/clusters/build-clusters/01_cluster/assets/admin_cluster-admin-0_list.yaml
+++ b/clusters/build-clusters/01_cluster/assets/admin_cluster-admin-0_list.yaml
@@ -25,6 +25,7 @@ items:
   - AlexNPavel
   - jupierce
   - bradmwilliams
+  - alvaroaleman
 
 - apiVersion: rbac.authorization.k8s.io/v1
   kind: ClusterRoleBinding
