--- a/ci-operator/config/openshift/cincinnati/openshift-cincinnati-master.yaml
+++ b/ci-operator/config/openshift/cincinnati/openshift-cincinnati-master.yaml
@@ -12,7 +12,7 @@ images:
   inputs:
     root:
       as:
-      - "cincinnati:build"
+      - "local/cincinnati-build:latest"
       paths: null
   dockerfile_path: dist/Dockerfile.deploy/Dockerfile
   to: deploy
@@ -20,7 +20,7 @@ images:
   inputs:
     root:
       as:
-      - "cincinnati:build"
+      - "local/cincinnati-build:latest"
       paths: null
   dockerfile_path: dist/Dockerfile.e2e/Dockerfile
   to: e2e-test
