--- a/core-services/prow/03_deployment/admin_config_updater_rbac.yaml
+++ b/core-services/prow/03_deployment/admin_config_updater_rbac.yaml
@@ -680,3 +680,33 @@ items:
   - kind: ServiceAccount
     name: config-updater
     namespace: ci
+
+- kind: Role
+  apiVersion: rbac.authorization.k8s.io/v1
+  metadata:
+    name: config-updater
+    namespace: ocp-private
+  rules:
+    - apiGroups:
+        - image.openshift.io
+      resources:
+        - imagestreams
+      verbs:
+        - get
+        - create
+        - update
+        - patch
+
+- kind: RoleBinding
+  apiVersion: rbac.authorization.k8s.io/v1
+  metadata:
+    name: config-updater
+    namespace: ocp-private
+  roleRef:
+    apiGroup: rbac.authorization.k8s.io
+    kind: Role
+    name: config-updater
+  subjects:
+  - kind: ServiceAccount
+    name: config-updater
+    namespace: ci
