Promote 3.11 console image

--- a/ci-operator/config/openshift/console/openshift-console-release-3.11.yaml
+++ b/ci-operator/config/openshift/console/openshift-console-release-3.11.yaml
@@ -16,6 +16,9 @@ images:
       - build
       paths: null
   to: console
+promotion:
+  name: origin-v3.11
+  namespace: openshift
 resources:
   '*':
     limits: {}
