bugzilla: update branch rules for 4.4->4.5 cut over
Signed-off-by: Steve Kuznetsov <skuznets@redhat.com>

--- a/core-services/prow/02_config/_plugins.yaml
+++ b/core-services/prow/02_config/_plugins.yaml
@@ -154,7 +154,7 @@ bugzilla:
         status: MODIFIED
       state_after_validation:
         status: POST
-      target_release: 4.4.0
+      target_release: 4.5.0
       valid_states:
       - status: NEW
       - status: ASSIGNED
@@ -173,13 +173,7 @@ bugzilla:
       target_release: 4.3.z
       validate_by_default: true
     openshift-4.4:
-      dependent_bug_states:
-      - status: MODIFIED
-      - status: ON_QA
-      - status: VERIFIED
-      - status: RELEASE_PENDING
-      - resolution: ERRATA
-        status: CLOSED
+      dependent_bug_target_release: 4.5.0
       target_release: 4.4.0
       validate_by_default: true
     release-4.1:
@@ -195,13 +189,7 @@ bugzilla:
       target_release: 4.3.z
       validate_by_default: true
     release-4.4:
-      dependent_bug_states:
-      - status: MODIFIED
-      - status: ON_QA
-      - status: VERIFIED
-      - status: RELEASE_PENDING
-      - resolution: ERRATA
-        status: CLOSED
+      dependent_bug_target_release: 4.5.0
       target_release: 4.4.0
       validate_by_default: true
   orgs:
