--- a/ci-operator/jobs/cri-o/cri-o/cri-o-cri-o-master-presubmits.yaml
+++ b/ci-operator/jobs/cri-o/cri-o/cri-o-cri-o-master-presubmits.yaml
@@ -42,6 +42,15 @@ presubmits:
     trigger: ((?m)^/test( rhel| critest| critest_rhel),?(\s+|$))
   - agent: jenkins
     always_run: true
+    context: ci/openshift-jenkins/e2e_crun_cgroupv2
+    labels:
+      master: ci.openshift.redhat.com
+    name: test_pull_request_crio_e2e_crun_cgroupv2
+    optional: true
+    rerun_command: /test e2e_cgroupv2
+    trigger: ((?m)^/test( cgroupv2| e2e_cgroupv2| crun| e2e| e2e_crun),?(\s+|$))
+  - agent: jenkins
+    always_run: true
     context: ci/openshift-jenkins/e2e_crun
     labels:
       master: ci.openshift.redhat.com
@@ -88,6 +97,15 @@ presubmits:
     name: test_pull_request_crio_integration_crun_fedora
     rerun_command: /test integration_crun
     trigger: ((?m)^/test( crun| integration| integration_crun),?(\s+|$))
+  - agent: jenkins
+    always_run: true
+    context: ci/openshift-jenkins/integration_crun_cgroupv2
+    labels:
+      master: ci.openshift.redhat.com
+    name: test_pull_request_crio_integration_crun_fedora_cgroupv2
+    optional: true
+    rerun_command: /test integration_cgroupv2
+    trigger: ((?m)^/test( cgroupv2| integration_cgroupv2| crun| integration| integration_crun),?(\s+|$))
   - agent: jenkins
     always_run: true
     context: ci/openshift-jenkins/integration_fedora
