Allow alvaroaleman to rerun jobs

--- a/core-services/prow/02_config/_config.yaml
+++ b/core-services/prow/02_config/_config.yaml
@@ -256,6 +256,7 @@ deck:
     - hongkailiu
     - vikaslaad
     - dobbymoodge
+    - alvaroaleman
   spyglass:
     announcement: 'The old job viewer, Gubernator, has been deprecated in favour of
       this page, Spyglass.{{if .ArtifactPath}} For now, the old page is <a href=''https://openshift-gce-devel.appspot.com/build/{{.ArtifactPath}}''>still
