Fix image configuration
Signed-off-by: Daniel Hiller <daniel.hiller.1972@gmail.com>

--- a/ci-operator/config/kubevirt/kubevirt/kubevirt-kubevirt-master.yaml
+++ b/ci-operator/config/kubevirt/kubevirt/kubevirt-kubevirt-master.yaml
@@ -35,4 +35,4 @@ tests:
     ./hack/ci/test.sh
   openshift_installer_custom_test_image:
     cluster_profile: gcp
-    from: kubevirt-test
+    from: pipeline:kubevirt-test
