--- a/ci-operator/jobs/kubevirt/kubevirt/kubevirt-kubevirt-master-presubmits.yaml
+++ b/ci-operator/jobs/kubevirt/kubevirt/kubevirt-kubevirt-master-presubmits.yaml
@@ -45,7 +45,7 @@ presubmits:
             cd /go/src/kubevirt.io/kubevirt
             ./hack/ci/test.sh
         - name: TEST_IMAGESTREAM_TAG
-          value: kubevirt-test
+          value: pipeline:kubevirt-test
         image: ci-operator:latest
         imagePullPolicy: Always
         name: ""
