Add prow to openshift/sriov-tests
Signed-off-by: Sebastian Sch <sebassch@gmail.com>

--- a/core-services/prow/02_config/_config.yaml
+++ b/core-services/prow/02_config/_config.yaml
@@ -445,6 +445,7 @@ tide:
     openshift/knative-serving: squash
     openshift/odo: squash
     openshift/odo-init-image: squash
+    openshift/sriov-tests: squash
     openshift/static-config-operator: squash
     openshift/template-service-broker-operator: squash
     openshift/verification-tests: squash
@@ -1090,6 +1091,18 @@ tide:
     - do-not-merge/invalid-owners-file
     repos:
     - openshift-kni/baremetal-deploy
+  - labels:
+    - lgtm
+    - approved
+    missingLabels:
+    - needs-rebase
+    - do-not-merge/hold
+    - do-not-merge/work-in-progress
+    - do-not-merge/invalid-owners-file
+    - do-not-merge/blocked-paths
+    - bugzilla/invalid-bug
+    repos:
+    - openshift/sriov-tests
   - labels:
     - lgtm
     - approved
