--- a/core-services/prow/02_config/_plugins.yaml
+++ b/core-services/prow/02_config/_plugins.yaml
@@ -2547,6 +2547,8 @@ plugins:
   - approve
   openshift/splunk-forwarder-operator:
   - approve
+  openshift/sriov-tests:
+  - approve
   openshift/static-config-operator:
   - approve
   openshift/tektoncd-catalog:
