Add separate openstack-ppc64le-quota-slice for Power CI

--- a/core-services/prow/02_config/_boskos.yaml
+++ b/core-services/prow/02_config/_boskos.yaml
@@ -20,6 +20,10 @@ resources:
   state: free
   min-count: 3
   max-count: 3
+- type: openstack-ppc64le-quota-slice
+  state: free
+  min-count: 30
+  max-count: 30
 - type: vsphere-quota-slice
   state: free
   min-count: 4
