--- a/core-services/prow/03_deployment/boskos_metrics.yaml
+++ b/core-services/prow/03_deployment/boskos_metrics.yaml
@@ -44,7 +44,7 @@ spec:
       - name: metrics
         image: gcr.io/k8s-prow/boskos/metrics:v20200213-7790e5cec
         args:
-        - --resource-type=aws-quota-slice,azure4-quota-slice,gcp-quota-slice,openstack-quota-slice,vsphere-quota-slice,ovirt-quota-slice,ovirt-bm01,ovirt-bm02
+        - --resource-type=aws-quota-slice,azure4-quota-slice,gcp-quota-slice,openstack-quota-slice,openstack-ppc64le-quota-slice,vsphere-quota-slice,ovirt-quota-slice,ovirt-bm01,ovirt-bm02
         - --resource-state=free,leased
         ports:
           - name: raw
