--- a/core-services/prow/03_deployment/boskos_reaper.yaml
+++ b/core-services/prow/03_deployment/boskos_reaper.yaml
@@ -21,5 +21,5 @@ spec:
         image: gcr.io/k8s-prow/boskos/reaper:v20200213-7790e5cec
         args:
         - --boskos-url=http://boskos
-        - --resource-type=aws-quota-slice,azure4-quota-slice,gcp-quota-slice,openstack-quota-slice,vsphere-quota-slice,ovirt-quota-slice,ovirt-bm01,ovirt-bm02
+        - --resource-type=aws-quota-slice,azure4-quota-slice,gcp-quota-slice,openstack-quota-slice,openstack-ppc64le-quota-slice,vsphere-quota-slice,ovirt-quota-slice,ovirt-bm01,ovirt-bm02
         - --target-state=free
