Fix resolver-address: wmcb repo

--- a/ci-operator/jobs/openshift/windows-machine-config-bootstrapper/openshift-windows-machine-config-bootstrapper-master-presubmits.yaml
+++ b/ci-operator/jobs/openshift/windows-machine-config-bootstrapper/openshift-windows-machine-config-bootstrapper-master-presubmits.yaml
@@ -91,7 +91,7 @@ presubmits:
         - --lease-server=https://boskos-ci.svc.ci.openshift.org
         - --org=openshift
         - --repo=windows-machine-config-bootstrapper
-        - --resolver-address=http://ci-operator-configresolver
+        - --resolver-address=http://ci-operator-configresolver-ci.svc.ci.openshift.org
         - --secret-dir=/usr/local/e2e-wmcb-cluster-profile
         - --sentry-dsn-path=/etc/sentry-dsn/ci-operator
         - --target=e2e-wmcb
