--- a/ci-operator/templates/openshift/installer/cluster-launch-installer-remote-libvirt-e2e.yaml
+++ b/ci-operator/templates/openshift/installer/cluster-launch-installer-remote-libvirt-e2e.yaml
@@ -351,7 +351,7 @@ objects:
           libvirt:
             URI: "${REMOTE_LIBVIRT_URI}"
             network:
-              if: "br${JOB_NAME_HASH}"
+              if: "br${JOB_NAME_HASH}${BUILD_ID}"
         pullSecret: >
           ${PULL_SECRET}
         sshKey: |
