Add the kourier repository and create the basic image.

--- a/core-services/prow/02_config/_config.yaml
+++ b/core-services/prow/02_config/_config.yaml
@@ -428,6 +428,7 @@ tide:
     coreos/rpm-ostree: rebase
     integr8ly/ansible-tower-configuration: rebase
     integr8ly/heimdall: rebase
+    openshift-knative/kourier: squash
     openshift-knative/serverless-operator: squash
     openshift-knative/serving-operator: squash
     openshift-kni/baremetal-deploy: squash
@@ -1169,6 +1170,7 @@ tide:
     - openshift-kni/cnf-features-deploy
     - openshift-knative/serverless-operator
     - openshift-knative/serving-operator
+    - openshift-knative/kourier
   - labels:
     - lgtm
     - approved
