--- a/ci-operator/templates/openshift/installer/cluster-launch-installer-upi-e2e.yaml
+++ b/ci-operator/templates/openshift/installer/cluster-launch-installer-upi-e2e.yaml
@@ -1206,43 +1206,43 @@ objects:
             esac
             echo "Azure region: ${AZURE_REGION}"
 
-            export BASE_DOMAIN_RESOURCE_GROUP="os4-common"	
+            export BASE_DOMAIN_RESOURCE_GROUP="os4-common"
             base_domain="${BASE_DOMAIN:-ci.azure.devcluster.openshift.com}"
-            echo "Base domain: ${base_domain}"	
+            echo "Base domain: ${base_domain}"
 
-            cat > /tmp/artifacts/installer/install-config.yaml << EOF	
-        apiVersion: v1	
-        baseDomain: ${base_domain}	
-        metadata:	
-          name: ${CLUSTER_NAME}	
-        controlPlane:	
-          name: master	
-          replicas: 3	
-        compute:	
-        - name: worker	
-          replicas: 0	
-        platform:	
-          azure:	
-            baseDomainResourceGroupName: ${BASE_DOMAIN_RESOURCE_GROUP}	
+            cat > /tmp/artifacts/installer/install-config.yaml << EOF
+        apiVersion: v1
+        baseDomain: ${base_domain}
+        metadata:
+          name: ${CLUSTER_NAME}
+        controlPlane:
+          name: master
+          replicas: 3
+        compute:
+        - name: worker
+          replicas: 0
+        platform:
+          azure:
+            baseDomainResourceGroupName: ${BASE_DOMAIN_RESOURCE_GROUP}
             region: ${AZURE_REGION}
-        pullSecret: >	
-          ${PULL_SECRET}	
-        sshKey: |	
-          ${SSH_PUB_KEY}	
+        pullSecret: >
+          ${PULL_SECRET}
+        sshKey: |
+          ${SSH_PUB_KEY}
         EOF
             export PATH=${HOME}/.local/bin:${PATH}
 
             echo "Creating manifests"
             openshift-install --dir=/tmp/artifacts/installer create manifests
-            
+
             pushd /tmp/artifacts/installer
 
             echo "Editing manifests"
-            rm -f openshift/99_openshift-cluster-api_master-machines-*.yaml	
-            rm -f openshift/99_openshift-cluster-api_worker-machineset-*.yaml	
+            rm -f openshift/99_openshift-cluster-api_master-machines-*.yaml
+            rm -f openshift/99_openshift-cluster-api_worker-machineset-*.yaml
             sed -i "s;mastersSchedulable: true;mastersSchedulable: false;g" manifests/cluster-scheduler-02-config.yml
-            sed -i "/publicZone/,+1d" manifests/cluster-dns-02-config.yml 
-            sed -i "/privateZone/,+1d" manifests/cluster-dns-02-config.yml 
+            sed -i "/publicZone/,+1d" manifests/cluster-dns-02-config.yml
+            sed -i "/privateZone/,+1d" manifests/cluster-dns-02-config.yml
 
             popd
         else
@@ -1522,6 +1522,17 @@ objects:
           done
 
           echo "bootstrap: ${BOOTSTRAP_IP} control-plane: ${CONTROL_PLANE_0_IP} ${CONTROL_PLANE_1_IP} ${CONTROL_PLANE_2_IP} compute: ${COMPUTE_0_IP} ${COMPUTE_1_IP}"
+        elif [[ "${CLUSTER_TYPE}" == "openstack" ]]; then
+          # run setup job
+          echo "setting up openstack upi job"
+
+          # TODO: get openstack upi dependancies
+          # TODO: create dns records
+          # TODO: create install config
+          # TODO: create and manage manifests
+          # TODO: generate and manage ignition configs
+          # TODO: deploy openstack upi cluster
+
         elif [[ "${CLUSTER_TYPE}" == "gcp" ]]; then
           mkdir -p ${HOME}/gcp
 
@@ -1574,7 +1585,7 @@ objects:
           gcloud deployment-manager deployments create ${CLUSTER_NAME}-vpc --config 01_vpc.yaml
 
           # Deploy infra
-          export CLUSTER_NETWORK=`gcloud compute networks describe ${INFRA_ID}-network --format json | jq -r .selfLink`
+          export CLUSTER[[ "${CLUSTER_TYPE}" == _NETWORK=`gcloud compute networks describe ${INFRA_ID}-network --format json | jq -r .selfLink`
 
           cat <<EOF > 02_infra.yaml
         imports:
@@ -1876,9 +1887,9 @@ objects:
           fi
 
           echo "Uploading bootstrap.ign"
-          az storage container create --name files --account-name $ACCOUNT_NAME --public-access blob          
+          az storage container create --name files --account-name $ACCOUNT_NAME --public-access blob
           az storage blob upload --account-name $ACCOUNT_NAME --account-key $ACCOUNT_KEY -c "files" -f "/tmp/artifacts/installer/bootstrap.ign" -n "bootstrap.ign"
-          
+
           echo "Creating private DNS zone"
           az network private-dns zone create -g $RESOURCE_GROUP -n ${CLUSTER_NAME}.${base_domain}
 
@@ -1893,7 +1904,7 @@ objects:
           az group deployment create -g $RESOURCE_GROUP \
             --template-file "01_vnet.json" \
             --parameters baseName="$INFRA_ID"
-        
+
           echo "Linking VNet to private DNS zone"
           az network private-dns link vnet create -g $RESOURCE_GROUP -z ${CLUSTER_NAME}.${base_domain} -n ${INFRA_ID}-network-link -v "${INFRA_ID}-vnet" -e false
 
@@ -1903,7 +1914,7 @@ objects:
             --template-file "02_storage.json" \
             --parameters vhdBlobURL="${VHD_BLOB_URL}" \
             --parameters baseName="$INFRA_ID"
-          
+
           echo "Deploying 03_infra"
           az group deployment create -g $RESOURCE_GROUP \
             --template-file "03_infra.json" \
@@ -1925,7 +1936,7 @@ objects:
 
           BOOTSTRAP_PUBLIC_IP=$(az network public-ip list -g $RESOURCE_GROUP --query "[?name=='${INFRA_ID}-bootstrap-ssh-pip'] | [0].ipAddress" -o tsv)
           GATHER_BOOTSTRAP_ARGS="${GATHER_BOOTSTRAP_ARGS} --bootstrap ${BOOTSTRAP_PUBLIC_IP}"
-          
+
           echo "Deploying 05_masters"
           MASTER_IGNITION=$(cat /tmp/artifacts/installer/master.ign | base64)
           az group deployment create -g $RESOURCE_GROUP \
@@ -1934,7 +1945,7 @@ objects:
             --parameters sshKeyData="$SSH_PUB_KEY" \
             --parameters privateDNSZoneName="${CLUSTER_NAME}.${base_domain}" \
             --parameters baseName="$INFRA_ID"
-                    
+
           MASTER0_IP=$(az network nic ip-config show -g $RESOURCE_GROUP --nic-name ${INFRA_ID}-master-0-nic --name pipConfig --query "privateIpAddress" -o tsv)
           MASTER1_IP=$(az network nic ip-config show -g $RESOURCE_GROUP --nic-name ${INFRA_ID}-master-1-nic --name pipConfig --query "privateIpAddress" -o tsv)
           MASTER2_IP=$(az network nic ip-config show -g $RESOURCE_GROUP --nic-name ${INFRA_ID}-master-2-nic --name pipConfig --query "privateIpAddress" -o tsv)
@@ -1968,6 +1979,9 @@ objects:
           gsutil rm gs://${INFRA_ID}-bootstrap-ignition/bootstrap.ign
           gsutil rb gs://${INFRA_ID}-bootstrap-ignition
           gcloud deployment-manager deployments delete -q ${CLUSTER_NAME}-bootstrap
+        elif [[ "${CLUSTER_TYPE}" == "openstack" ]]; then
+          # TODO: destroy bootstrap resources
+          echo "openstack bootstrap complete"
         elif [[ "${CLUSTER_TYPE}" == "vsphere" ]]; then
           terraform apply -auto-approve -var 'bootstrap_complete=true' -no-color &
           wait "$!"
@@ -1984,7 +1998,7 @@ objects:
 
         if [[ "${CLUSTER_TYPE}" == "azure4" ]]; then
           echo "Adding ingress DNS records"
-          
+
           export KUBECONFIG=/tmp/artifacts/installer/auth/kubeconfig
 
           public_ip_router="<pending>"
@@ -1993,9 +2007,9 @@ objects:
             public_ip_router=$(oc -n openshift-ingress get service router-default --no-headers | awk '{print $4}')
             echo $public_ip_router
           done
-          
+
           az network dns record-set a add-record -g $BASE_DOMAIN_RESOURCE_GROUP -z ${base_domain} -n *.apps.${CLUSTER_NAME} -a $public_ip_router --ttl 300
-          
+
           az network private-dns record-set a create -g $RESOURCE_GROUP -z ${CLUSTER_NAME}.${base_domain} -n *.apps --ttl 300
           az network private-dns record-set a add-record -g $RESOURCE_GROUP -z ${CLUSTER_NAME}.${base_domain} -n *.apps -a $public_ip_router
         fi
@@ -2138,7 +2152,7 @@ objects:
           queue /tmp/artifacts/apiservices.json oc --insecure-skip-tls-verify --request-timeout=5s get apiservices -o json
           queue /tmp/artifacts/apiservices.json oc --insecure-skip-tls-verify --request-timeout=5s get apiservices -o json
           queue /tmp/artifacts/clusteroperators.json oc --insecure-skip-tls-verify --request-timeout=5s get clusteroperators -o json
-          queue /tmp/artifacts/clusterversion.json oc --insecure-skip-tls-verify --request-timeout=5s get clusterversion -o json
+          queue /tmp/artifacts/clusterversion.json oc --insecure-skvsphereip-tls-verify --request-timeout=5s get clusterversion -o json
           queue /tmp/artifacts/configmaps.json oc --insecure-skip-tls-verify --request-timeout=5s get configmaps --all-namespaces -o json
           queue /tmp/artifacts/csr.json oc --insecure-skip-tls-verify --request-timeout=5s get csr -o json
           queue /tmp/artifacts/endpoints.json oc --insecure-skip-tls-verify --request-timeout=5s get endpoints --all-namespaces -o json
@@ -2246,6 +2260,10 @@ objects:
               INFRA_ID="$(jq -r .infraID /tmp/artifacts/installer/metadata.json)"
               az group delete --name ${INFRA_ID}-rg --yes
             fi
+          elif [[ "${CLUSTER_TYPE}" == "openstack" ]]; then
+            # TODO: deprovision openstack upi infrastructure
+            # TODO: unset cluster dns records
+            echo "deprovisioning openstack"
           else
             cd /tmp/shared/tf
             rm -rf .terraform
